# PDF-Equilibrist

./: .gitignore  CLAUDE.md  CMakeLists.txt  DDeveloppementPDF-Equilibristenvironment.yml  LICENSE.md  PDF-Equilibrist.spec  PRIVACY.md  README.md  debug_text.py  environment.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: settings.local.json
.github/workflows/: build.yml  ci.yml  linux-flatpak.yml  release.yml
docs/: 1.INDEX.md  2.ARCHITECTURE.md  3.CONTRIBUTING.md  4.OPERATIONS.md  5.BUILD.md  6.SECURITE.md
installer/: PDF-Equilibrist.nsi
packaging/flatpak/: README.md  (+6 more)
src/: CMakeLists.txt  main.cpp
src/pdf_equilibrist/: __init__.py  app.py  cve_checker.py  main.py  registration.py  update.py  utils.py
src/pdf_equilibrist.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/pdf_equilibrist/core/: document.py
src/pdf_equilibrist/operations/: annotate.py  convert.py  edit.py  ocr.py  pages.py  protect.py
src/pdf_equilibrist/ui/: batch_dialog.py  cve_dialog.py  dialogs.py  floating_item.py  main_window.py  page_edit_widget.py  print_dialog.py  print_dialog_win32.py  search_bar.py  signature_dialog.py  splash_screen.py  thumbnail_panel.py  title_bar.py  update_dialog.py  viewer.py  widgets.py
src/pdf_equilibrist/ui/tabs/: tab_afficher.py  tab_annoter.py  tab_convertir.py  tab_modifier.py  tab_page.py  tab_proteger.py
tools/: build_docs_pdf.py  create_pptx_v2.py  distribute.ps1  generate_business_presentation.py  make_ico.py  prepare_build.py  register_filetype.ps1  register_filetype.py
(+8 files in other folders)
